Fixes #14: Toolbar search bar button collapses on close

--- a/src/app/main/toolbar/toolbar.component.scss
+++ b/src/app/main/toolbar/toolbar.component.scss
@@ -30,7 +30,7 @@
     }
 
     .user-button,
-    .search-button,
+    fuse-search-bar,
     .language-button,
     .quick-panel-toggle-button {
         min-width: 64px;
